--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "build": "tsc"
   },
   "dependencies": {
-    "@prisma/client": "4.1.1",
+    "@prisma/client": "latest",
     "express": "4.18.2"
   },
   "devDependencies": {
     "@types/express": "4.17.14",
     "@types/node": "18.11.12",
-    "prisma": "4.1.1",
+    "prisma": "latest",
     "ts-node": "10.9.1",
-    "typescript": "4.9.4"
+    "typescript": "^4.9.4"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
